--- a/src/index.css
+++ b/src/index.css
@@ -88,3 +88,30 @@ img {
   height: 100%;
   border-radius: 10px;
 }
+
+/* Mobile */
+@media (max-width: 768px) {
+
+  img {
+    width: 100%;
+    padding: 10px;
+  }
+
+  .start,
+  .managed-component {
+    width: 100%;
+    padding: 80px;
+  }
+
+  .start button {
+    font-size: 18px;
+    margin: 10px;
+  }
+
+  .startImg img {
+    width: 170px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+}
